fix quotes that don't need it from being collapsed

--- a/skins/base/base.css
+++ b/skins/base/base.css
@@ -484,8 +484,8 @@ a.deleteLink:hover {color:#f00 !important; text-decoration:line-through}
 .postBody h4 {margin:1.2em 0 0.8em; font-size:130%; font-weight:normal}
 
 blockquote {background:#f2f2f2; background:rgba(0, 0, 0, 0.05); margin:0 -12px 1em; padding:5px 7px 1px 36px; color:#555; position:relative;}
-blockquote:before {content:"‘‘"; letter-spacing:-4px; font-size:50px; line-height:50px; font-family:helvetica; font-weight:bold; position:absolute; left:5px; top:0; color:#ddd; color:rgba(0, 0, 0, 0.1);}
-blockquote cite {display:inline; font-style:normal; font-weight:bold}
+/*blockquote:before {content:"‘‘"; letter-spacing:-4px; font-size:50px; line-height:1px; margin-top:20px; margin-bottom:-100px; font-family:helvetica; font-weight:bold; position:absolute; left:5px; top:0; color:#ddd; color:rgba(0, 0, 0, 0.1);}
+*/blockquote cite {display:inline; font-style:normal; font-weight:bold}
 blockquote cite a {color:#555}
 blockquote p {margin-bottom:0.5em}
 blockquote .postRef {float:left; margin:-3px 0 0 -30px; visibility:hidden}
